# Filer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  Tests.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Prototype/: CMakeLists.txt
Prototype/CLI/: CMakeLists.txt
Prototype/CLI/Include/: last_file_path.hpp
Prototype/CLI/Source/: cli.cpp  last_file_path.cpp
Prototype/GUI/: CMakeLists.txt
Prototype/GUI/Source/: main.cpp
docker/: Dockerfile  Dockerfile.pop_os  Dockerfile.pop_os_v2  Dockerfile.pop_os_v3
